--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-      "treatUndefinedAsUnspecified": false 
+      "treatUndefinedAsUnspecified": false,
+      "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
     }
 }
