--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-      "treatUndefinedAsUnspecified": false,
+      "treatUndefinedAsUnspecified": 0,
       "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
     }
 }
