--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-      "treatUndefinedAsUnspecified": 0,
-      "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
+      "consistent-return": "off",
+      "no-underscore-dangle":  ["error", { "allow": ["_id"] }],
+      "new-cap": ["error", { "newIsCap": false, "capIsNewExceptions": ["Router"] }]
     }
 }
