--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "rules": {
       "consistent-return": "off",
       "no-underscore-dangle":  ["error", { "allow": ["_id"] }],
-      "new-cap": ["error", { "newIsCap": false, "capIsNewExceptions": ["Router"] }]
+      "new-cap": ["error", { "newIsCap": false, "capIsNewExceptions": ["Router"] }],
+      "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
     }
 }
