--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "validator": "^13.7.0"
